feat: added some more stuff
